--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
-    "name": "strebl/l5-ldap-auth",
+    "name": "TwinLakes/ldap-auth",
     "description": "Laravel 5 Active Directory LDAP Authentication driver",
     "keywords": ["laravel", "L5", "LDAP", "Authentication", "Laravel 5"],
     "authors": [
+        {
+            "name": "Michael Kelley",
+            "email": "mkelley@twlakes.coop"
+        },
         {
             "name": "Manuel Strebel",
             "email": "manuel_st@msn.com"
@@ -24,7 +28,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Ccovey\\LdapAuth": "src/"
+            "TwinLakes\\LdapAuth": "src/"
         }
     },
     "minimum-stability": "dev"
